<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayoutCarData"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextVehiclePlate"
                android:layout_width="115dp"
                android:layout_height="60dp"
                android:hint="@string/VehiclePlate"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRegistrationType"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:hint="@string/RegistrationType"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMonths"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/Months"
                android:inputType="number"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDateStart"
                android:layout_width="104dp"
                android:layout_height="60dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/Start"
                android:longClickable="false"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                tools:context="com.example.datepickertest.MainActivity" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDateFinish"
                android:layout_width="104dp"
                android:layout_height="60dp"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/Finish"
                android:inputType="date"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMoneySpent"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/MoneySpent"
                android:inputType="number"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/ButtonDelete"
                android:layout_width="94dp"
                android:layout_height="60dp"
                android:text="@string/Delete"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
